# ewwesolutions

./: .gitignore  README.md  cv.html  cv.md
fiszkomat/: .env.example  .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
fiszkomat/scripts/: create_payment_links.py  genqa_bank_to_cards.py  genqa_catalog.py  genqa_coverage_report.py  genqa_extract_bank.py  genqa_extract_textbook.py  genqa_merge_enrichment.py
fiszkomat/src/fiszkomat/: cli.py  core.py  prompts.py  study_html.py  web.py
fiszkomat/tests/: conftest.py  test_audit_findings.py  test_sample_decks.py  test_telemetry.py  test_validation.py
invoice_idp/: .env.example  .gitignore  CHANGELOG-archive.md  CHANGELOG.md  Caddyfile  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.prod.yml  docker-compose.vm.yml  docker-compose.yml  enqueue.py  mypy.ini  pyproject.toml
invoice_idp/.github/workflows/: ci.yml
invoice_idp/alembic/: env.py
invoice_idp/alembic/versions/: 0001_baseline.py  0002_invoice.py  0003_invoice_review.py  0004_billing.py
invoice_idp/prompts/: extraction_v1.md
invoice_idp/schemas/: .gitignore  README.md
invoice_idp/scripts/: curate_eval_set.py  dedup_eval_set.py  extract_prototype.py  gmail_pull.py  run_eval.py  spotcheck.py
invoice_idp/src/app/: config.py  db.py  email.py  main.py  sms.py  storage.py
invoice_idp/src/app/api/: invoices.py  webhooks.py
invoice_idp/src/app/auth/: csrf.py  deps.py  passwords.py  routes.py
invoice_idp/src/app/billing/: __init__.py  stripe_client.py
invoice_idp/src/app/services/: __init__.py  invoice_upload.py
invoice_idp/src/app/templates/: base.html  index.html  status.html
invoice_idp/src/app/templates/app/: _layout.html  billing.html  dashboard.html  invoice_review.html  (+4 more)
invoice_idp/src/app/web/: routes.py
invoice_idp/src/app/workers/: error_messages.py  extract.py
invoice_idp/src/models/: __init__.py  audit.py  invoice.py  invoice_record.py  org.py  usage.py  user.py
invoice_idp/src/pipeline/export/: __init__.py  csv_export.py  jpk_fa.py  json_export.py
invoice_idp/src/pipeline/extraction/: anthropic_provider.py  bedrock_provider.py  extractor.py  pdf.py  provider.py
invoice_idp/src/pipeline/validation/: checks.py
invoice_idp/src/utils/: kod_urzedu.py  nip.py  regon.py
invoice_idp/tests/: test_no_data_leak.py
invoice_idp/tests/integration/: conftest.py  test_auth.py  test_billing.py  test_corrections.py  test_export.py  test_invoices.py  test_phone_verify.py  test_settings.py  test_status_page.py  test_upload_gate.py  test_upload_validation.py  test_webhook_stripe.py
invoice_idp/tests/unit/: test_error_messages.py  test_export.py  test_invoice_upload_service.py  test_jpk_fa.py  test_kod_urzedu.py  test_nip.py  test_regon.py  test_sms.py  test_status_gather.py  test_stripe_client.py  test_validation.py
pl_evals/: .env.example  .gitignore  HANDOFF.md  README.md  SPEC.md  pyproject.toml
pl_evals/runner/: aggregate.py  runner.py  scoring.py
pl_evals/runner/providers/: base.py  groq.py  hf_inference.py  openrouter.py
pl_evals/site/: index.html  methodology.html
pl_evals/tasks/invoice_extraction/: README.md  prompt.md  schema.json  task.yaml
pl_evals/tasks/invoice_extraction/cases/: seed.jsonl
pl_evals/tests/: test_aggregate.py  test_e2e_smoke.py  test_providers_base.py  test_providers_groq.py  test_providers_hf.py  test_providers_openrouter.py  test_runner.py  test_scoring.py
pl_evals/tests/fixtures/: sample_cases.jsonl  sample_prompt.md  sample_schema.json  sample_task.yaml
pl_evals/tests/fixtures/sample_results/: run1.jsonl
tender_agent/: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml  specs.md
tender_agent/_samples/curated/: firm_demo.json
tender_agent/src/tender_agent/: __init__.py  cli.py  draft.py  fetch.py  models.py  monitor.py  parse.py  siwz_extract.py  siwz_ezamowienia.py  siwz_logintrade.py  verify.py
tender_agent/tests/: test_draft.py  test_parse.py
tender_agent/tests/fixtures/: minimal_announcement.html
(+128 files in other folders)
