[project]
name = "fiszkomat"
version = "0.1.0"
description = "Polish-medical skrypt PDF -> Anki .apkg via chunked LLM generation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11",
    "genanki>=0.13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "stripe>=7.0",
]

[project.optional-dependencies]
web = []  # placeholder; web deps are required for Phase 1
dev = [
    "pytest>=8.0",
]

[project.scripts]
fiszkomat = "fiszkomat.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
