[project]
name = "faktomat"
version = "0.1.0"
description = "Faktomat — Polish-first invoice → JPK_FA / JSON / CSV (formerly invoice-idp)"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "pymupdf>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "arq>=0.26",
    "boto3>=1.34",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]
# Production-only deps. Stripe SDK is lazy-imported in
# `src/app/billing/stripe_client.py` and `src/app/api/webhooks.py`;
# Console paths work without it. Install with `pip install -e .[prod]`
# (or `pip install .[prod]` for non-editable) before running prod.
prod = [
    "stripe>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
