[project]
name = "pl_evals"
version = "0.0.1"
description = "Polish AI Production Eval Leaderboard — vertical production tasks scored across closed + open LLMs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.11",
]

[project.scripts]
pl-evals = "runner.runner:main"

[tool.setuptools.packages.find]
include = ["runner*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
